<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="3">


    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/detail_activity_background"
        android:elevation="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/counterView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="serif"
                    android:text="(1)"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nameInArabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/lateef"
                    android:text="@string/nameOfAllah"
                    android:textColor="@color/gold"
                    android:textSize="@dimen/_40sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/nameInEnglish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:fontFamily="@font/galindo"
            android:gravity="center"
            android:text="Allah"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/meaningOfName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Meaning: The Giver of Peace"
            android:textColor="@color/gold"
            android:textSize="@dimen/_15sdp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_weight="1.7"
        android:background="@drawable/detail_activity_background"
        android:elevation="@dimen/_5sdp"
        android:orientation="vertical"
        android:weightSum="2">


        <TextView
            android:id="@+id/referenceOfName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="Reference:"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/referenceInArabic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:fontFamily="@font/lateef"
            android:gravity="center"
            android:text="@string/bismiAllah"
            android:textColor="@color/gold"
            app:autoSizeMaxTextSize="@dimen/_35sdp"
            app:autoSizeStepGranularity="@dimen/_5sdp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/referenceInEnglish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/meaningOfAyat"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:autoSizeMaxTextSize="@dimen/_18sdp"
            app:autoSizeMinTextSize="@dimen/_13sdp"
            app:autoSizeStepGranularity="@dimen/_5sdp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_weight="0.3"
        android:gravity="center">

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/detail_activity_background"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="serif"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/detail_activity_background"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="serif"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>